--- a/SFASimplifier/SFASimplifier.csproj
+++ b/SFASimplifier/SFASimplifier.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="budul.HashExtensions" Version="1.8.0" />
     <PackageReference Include="budul.StringExtensions" Version="1.18.1" />
+    <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="3.0.0" />
   </ItemGroup>
 
