--- a/SFASimplifier/SFASimplifier.csproj
+++ b/SFASimplifier/SFASimplifier.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="budul.StringExtensions" Version="1.18.1" />
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="3.0.0" />
+    <PackageReference Include="ProjNet" Version="2.0.0" />
+    <PackageReference Include="ProjNET4GeoAPI" Version="1.4.1" />
   </ItemGroup>
 
 </Project>
