Project structure updated

--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,5 @@ FodyWeavers.xsd
 /Additionals/Samples/Romania_.geojson
 /Additionals/Samples/Hungary_.geojson
 /Additionals/Samples/Bremen_.geojson
+/Additionals/Samples/Brandenburg-Berlin.geojson
+/Additionals/Samples/Germany-East.geojson
