--- a/SFASimplifier/SFASimplifier.csproj
+++ b/SFASimplifier/SFASimplifier.csproj
@@ -1,13 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <StartupObject>SFASimplifier.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="budul.HashExtensions" Version="1.8.0" />
+    <PackageReference Include="budul.ProgressWatcher" Version="1.0.1" />
     <PackageReference Include="budul.StringExtensions" Version="1.18.1" />
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="3.0.0" />
