Status messages improved

--- a/.gitignore
+++ b/.gitignore
@@ -405,3 +405,4 @@ FodyWeavers.xsd
 /Additionals/Samples/Bremen_.geojson
 /Additionals/Samples/Brandenburg-Berlin.geojson
 /Additionals/Samples/Germany-East.geojson
+/Additionals/Samples/Germany-East_.geojson
