--- a/SFASimplifierCLI/Properties/launchSettings.json
+++ b/SFASimplifierCLI/Properties/launchSettings.json
@@ -4,6 +4,10 @@
       "commandName": "Project",
       "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Brandenburg-Berlin.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Brandenburg-Berlin_.geojson\""
     },
+    "Convert Germany-East": {
+      "commandName": "Project",
+      "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Germany-East.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Germany-East_.geojson\""
+    },
     "Convert Bremen": {
       "commandName": "Project",
       "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Bremen.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Bremen_.geojson\""
