--- a/SFASimplifierCLI/SFASimplifierCLI.csproj
+++ b/SFASimplifierCLI/SFASimplifierCLI.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="ShellProgressBar" Version="5.2.0" />
   </ItemGroup>
 
