--- a/SFASimplifierCLI/Properties/launchSettings.json
+++ b/SFASimplifierCLI/Properties/launchSettings.json
@@ -2,31 +2,31 @@
   "profiles": {
     "Convert Brandenburg / Berlin": {
       "commandName": "Project",
-      "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Brandenburg-Berlin.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Brandenburg-Berlin_.geojson\""
+      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Brandenburg-Berlin.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Brandenburg-Berlin_.geojson\""
     },
     "Convert Germany-East": {
       "commandName": "Project",
-      "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Germany-East.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Germany-East_.geojson\""
+      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Germany-East.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Germany-East_.geojson\""
     },
     "Convert Bremen": {
       "commandName": "Project",
-      "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Bremen.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Bremen_.geojson\""
+      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Bremen.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Bremen_.geojson\""
     },
     "Convert Hungary": {
       "commandName": "Project",
-      "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Hungary.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Hungary_.geojson\""
+      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Hungary.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Hungary_.geojson\""
     },
     "Convert Romania": {
       "commandName": "Project",
-      "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Romania.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Romania_.geojson\""
+      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Romania.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Romania_.geojson\""
     },
     "Convert Slovakia": {
       "commandName": "Project",
-      "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Slovakia.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Slovakia_.geojson\""
+      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Slovakia.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Slovakia_.geojson\""
     },
     "Convert Turkey": {
       "commandName": "Project",
-      "commandLineArgs": "\"..\\..\\..\\..\\Additionals\\Samples\\Turkey.geojson\" \"..\\..\\..\\..\\Additionals\\Samples\\Turkey_.geojson\""
+      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Turkey.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Turkey_.geojson\""
     }
   }
 }
