Minor progress handling corrections

--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,4 @@ FodyWeavers.xsd
 /Additionals/Samples/Brandenburg-Berlin.geojson
 /Additionals/Samples/Germany-East.geojson
 /Additionals/Samples/Germany-East_.geojson
+/Additionals/Samples/Brandenburg-Berlin_.geojson
