Routing graph writer added

--- a/.gitignore
+++ b/.gitignore
@@ -407,3 +407,4 @@ FodyWeavers.xsd
 /Additionals/Samples/Germany-East.geojson
 /Additionals/Samples/Germany-East_.geojson
 /Additionals/Samples/Brandenburg-Berlin_.geojson
+/Additionals/Samples/Bremen_.txt
