--- a/SFASimplifier/SFASimplifier.csproj
+++ b/SFASimplifier/SFASimplifier.csproj
@@ -5,14 +5,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="budul.HashExtensions" Version="1.8.0"/>
-		<PackageReference Include="budul.ProgressWatcher" Version="1.0.1"/>
-		<PackageReference Include="budul.StringExtensions" Version="1.18.1"/>
-		<PackageReference Include="CommandLineParser" Version="2.9.1"/>
-		<PackageReference Include="FuzzySharp" Version="2.0.2"/>
-		<PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="3.0.0"/>
-		<PackageReference Include="ProjNet" Version="2.0.0"/>
-		<PackageReference Include="ProjNET4GeoAPI" Version="1.4.1"/>
+		<PackageReference Include="budul.HashExtensions" Version="1.8.0" />
+		<PackageReference Include="budul.ProgressWatcher" Version="1.0.1" />
+		<PackageReference Include="budul.StringExtensions" Version="1.18.2" />
+		<PackageReference Include="CommandLineParser" Version="2.9.1" />
+		<PackageReference Include="CsvHelper" Version="30.0.1" />
+		<PackageReference Include="FuzzySharp" Version="2.0.2" />
+		<PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="3.0.0" />
+		<PackageReference Include="ProjNet" Version="2.0.0" />
+		<PackageReference Include="ProjNET4GeoAPI" Version="1.4.1" />
 	</ItemGroup>
 
 </Project>
