Routing lines creation completed

--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,4 @@ FodyWeavers.xsd
 /Additionals/Samples/Germany-East_.geojson
 /Additionals/Samples/Brandenburg-Berlin_.geojson
 /Additionals/Samples/Bremen_.txt
+/Additionals/Samples/Brandenburg-Berlin_.txt
