Determination of line junctions improved

--- a/.gitignore
+++ b/.gitignore
@@ -412,3 +412,4 @@ FodyWeavers.xsd
 *.sln.iml
 /Additionals/Samples/Stralsund.geojson
 /Additionals/Samples/Stralsund_.geojson
+/Additionals/Samples/Example_.geojson
