--- a/SFASimplifierCLI/Properties/launchSettings.json
+++ b/SFASimplifierCLI/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Convert Example": {
       "commandName": "Project",
-      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Example.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Example_.geojson\" --lineattrfilter \"\" --lineattrkey \"\" --pointattrfilter \"\" --pointattrkey \"\" "
+      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Example.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Example_.geojson\" "
     },
     "Convert Bremen": {
       "commandName": "Project",
