Angle handling corrected

--- a/.gitignore
+++ b/.gitignore
@@ -413,3 +413,4 @@ FodyWeavers.xsd
 /Additionals/Samples/Stralsund.geojson
 /Additionals/Samples/Stralsund_.geojson
 /Additionals/Samples/Example_.geojson
+/Additionals/Samples/Ontario_.geojson
