Git ignore adjusted

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 /Additionals/Samples/Example_.geojson
 /Additionals/Samples/Ontario_.geojson
 /Additionals/Samples/Germany-North.geojson
-
+/Additionals/Samples/Germany-North_.geojson
 /_Publish
 
 ## Ignore Visual Studio temporary files, build results, and
