--- a/CLI/Properties/launchSettings.json
+++ b/CLI/Properties/launchSettings.json
@@ -20,9 +20,9 @@
       "commandName": "Project",
       "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Ontario.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Ontario_.geojson\" --lineattrkeyfilter \"GO Transit Newmarket Subdivision\""
     },
-    "Convert North (filtered)": {
+    "Convert East (filtered)": {
       "commandName": "Project",
-      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Germany-North.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Germany-North_.geojson\" --bboxfilter 9.891815,53.426412,10.072060,53.508162"
+      "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Germany-East.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Germany-East_.geojson\" --distmerge 100 --bboxfilter 13.203335,52.503161,13.304272,52.534863"
     }
   }
 }
