--- a/CLI/Properties/launchSettings.json
+++ b/CLI/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Ontario.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Ontario_.geojson\" --lineattrkeyfilter \"GO Transit Newmarket Subdivision\""
     },
     "Convert East (filtered)": {
-      "commandName": "Project"
+      "commandName": "Project",
       "commandLineArgs": "-i \"..\\..\\..\\..\\Additionals\\Samples\\Germany-East.geojson\" -o \"..\\..\\..\\..\\Additionals\\Samples\\Germany-East_.geojson\" --bboxfilter 13.199387,52.437595,13.580475,52.580314 --locfuzzyscore 50"
     }
   }
