--- a/CLI/CLI.csproj
+++ b/CLI/CLI.csproj
@@ -11,8 +11,9 @@
 
 	<PropertyGroup>
 		<VersionMajor>1</VersionMajor>
-		<VersionMinor>2</VersionMinor>
-		<VersionBuild>2</VersionBuild>
+		<VersionMinor>3</VersionMinor>
+		<VersionBuild>0</VersionBuild>
+		<Version>$(VersionMajor).$(VersionMinor).$(VersionBuild)</Version>
 		<AssemblyVersion>$(VersionMajor).$(VersionMinor).$(VersionBuild)</AssemblyVersion>
 		<AssemblyName>SFASimplifier</AssemblyName>
 	</PropertyGroup>
